# server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  attach.sh  bringup_agent.py  bringup_real.sh  bringup_real_31.sh  bringup_sim.sh  cloudflare-tunnel-plan.md  docker-compose.yml  openapi.yaml  pyproject.toml  rosbridge.sh  start.sh  stop.sh  stop_bringup.sh
.github/workflows/: deploy.yml
cloudflared/: config.yml
docs/: handover.md  remote-access-setup.md  scripts-usage.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
nginx/: nginx.conf
script/: build_pyramid.sh  build_pyramid_nested.sh  cycle_grid.sh  cycle_nested.sh  unstack.sh  unstack_grid.sh
server/: access_log.py  config.py  main.py  schemas.py
server/domains/: cup_detection.py  fallen_cup.py  handineye.py  handtoeye.py  mouth_up_cup.py  robot.py
server/entrypoints/: handineye.py  handtoeye.py  robot.py
server/ros/: bridge.py  launch.py
server/routers/: dashboard.py  handineye.py  handtoeye.py  robot.py
server/services/: calibration.py  camera.py
tests/: conftest.py  test_cup_detection_domain.py  test_fallen_cup_domain.py  test_launch.py  test_robot_router.py  test_schemas.py
